Resolved Spotbug "bug"